--- a/style.css
+++ b/style.css
@@ -3,127 +3,108 @@ nav {
 }
 
 nav .left:hover {
-    transform: scale(1.2);
-}
-
-.right ul li:hover {
-    /* transform: rotate(10deg); */
-    /* transform: translate(50px 20px); */
-    /* transform: scale(1.3); */
-    /* transform: skewX(-30deg); */
-    /* transform: matrix(); */
-    transform: matrix(1.2, 0, 0, 1.3, 0, 0);
-}
-
-.right ul li {
-    list-style-type: none;
-}
-
-/* .right ul li:first-child {
-    display: none; */
-}
-
-.right ul li a {
-    text-decoration: none;
-    color: blueviolet;
+  transform: scale(1.2);
 }
 
 li {
-    padding: 0 5px;
-    margin: 0 5px;
-    
+  padding: 0 5px;
+  margin: 0 5px;
+}
+
+.right ul li {
+  list-style-type: none;
+}
+
+.right ul li:hover {
+  transform: matrix(1.2, 0, 0, 1.3, 0, 0);
+}
+
+.footer h5 a,
+.footer ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.right ul li a {
+  text-decoration: none;
+  color: blueviolet;
 }
 
 .left img {
-    /* width: fit-content; */
-    width: 10rem;
-    /* height: fit-content; */
-    /* align-self: center; */
+  width: 10rem;
 }
 
 .right button {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 .main {
-    background-image: linear-gradient(rgba(0, 47, 135, 0.7), rgba(0, 47, 135, 0.2)) ,  url(https://s0.rbk.ru/v6_top_pics/ampresize/media/img/2/70/755941410824702.jpg); 
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 700px;
-    opacity: 0.9;
-    display: flex;
-    /* flex-wrap: wrap; */
-    justify-content: center;
-
+  background-image: linear-gradient(rgba(0, 47, 135, 0.7), rgba(0, 47, 135, 0.2)), url(https://s0.rbk.ru/v6_top_pics/ampresize/media/img/2/70/755941410824702.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 700px;
+  opacity: 0.9;
+  display: flex;
+  justify-content: center;
 }
 
 .scripts {
-    align-self: center;
-    width: 250px;
-    
-
-    
+  align-self: center;
+  width: 250px;
 }
 
 .know {
-    color: white;
-    background-color: rgb(8, 247, 8);
-    padding: 0 30px;
+  color: white;
+  background-color: rgb(8, 247, 8);
+  padding: 0 30px;
 }
 
-
 .topgrid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    height: 100vh;
-    width: 90%;
-    margin: auto 10%;
-    
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: 100vh;
+  width: 90%;
+  margin: auto 10%;
 }
 
 .picscript {
-    width: 33.333%;
-    /* align-self: center; */
+  width: 33.333%;
 }
 
-.picscript  img {
-    width: 20rem;
-    height: 15rem;
-
+.picscript img {
+  width: 20rem;
+  height: 15rem;
 }
 
 .picscript p {
-    text-align: center;
+  text-align: center;
 }
 
 [class="text-capitalize text-center "] {
-    color: blue;
-    
+  color: blue;
 }
 
 .upper,
 .lower {
-    position: relative;
+  position: relative;
 }
 
 .our {
-    background-color: rgb(216, 210, 210);
-    position: relative;
+  background-color: rgb(216, 210, 210);
+  position: relative;
 }
 
 .img1 {
-    background-image: linear-gradient(rgba(0, 47, 135, 0.5), rgba(0, 47, 135, 0.5)),  url(https://i2.wp.com/marketbusinessnews.com/wp-content/uploads/2015/08/Retail-Banking.jpg?resize=529%2C435&ssl=1);
-     
+  background-image: linear-gradient(rgba(0, 47, 135, 0.5), rgba(0, 47, 135, 0.5)), url(https://i2.wp.com/marketbusinessnews.com/wp-content/uploads/2015/08/Retail-Banking.jpg?resize=529%2C435&ssl=1);
 }
 
 .img2 {
-    background: linear-gradient(rgba(0, 47, 135, 0.5), rgba(0, 47, 135, 0.5)) , url(https://www.gannett-cdn.com/presto/2019/05/24/POEN/d23d9ab2-dd24-402d-b3fc-bebb7e6e55b0-MainStreetSchoolNowGone5.jpg?auto=webp&crop=4239,2384,x0,y73&format=pjpg&width=1200);
+  background: linear-gradient(rgba(0, 47, 135, 0.5), rgba(0, 47, 135, 0.5)), url(https://www.gannett-cdn.com/presto/2019/05/24/POEN/d23d9ab2-dd24-402d-b3fc-bebb7e6e55b0-MainStreetSchoolNowGone5.jpg?auto=webp&crop=4239,2384,x0,y73&format=pjpg&width=1200);
 }
 
 .img3 {
-    background-image: linear-gradient(rgba(0, 47, 135, 0.5), rgba(0, 47, 135, 0.5)),  url(https://www.montcalm.co.uk/blog/wp-content/uploads/2018/03/chelsea-london.jpg);
+  background-image: linear-gradient(rgba(0, 47, 135, 0.5), rgba(0, 47, 135, 0.5)), url(https://www.montcalm.co.uk/blog/wp-content/uploads/2018/03/chelsea-london.jpg);
 }
 
 .img1,
@@ -132,13 +113,12 @@ li {
 .img4,
 .img5,
 .img6 {
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 12.5rem;
-    width: 12.5rem;
-    margin: 2em;
-    position: relative;
-    
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 12.5rem;
+  width: 12.5rem;
+  margin: 2em;
+  position: relative;
 }
 
 .img1 p,
@@ -147,87 +127,64 @@ li {
 .img4 p,
 .img5 p,
 .img6 p {
-    color: white;
-    text-align: center;
-    /* vertical-align: middle; */
-    /* justify-self: center; */
-    position: relative;
-    top: 40%;
-    /* margin: 5em; */
-}
-
-.img {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* flex-basis: ; */
-    /* align-items: center; */
-    /* justify-content: center; */
-
+  color: white;
+  text-align: center;
+  position: relative;
+  top: 40%;
 }
 
 .img4 {
-    background-image: linear-gradient(rgba(153, 241, 145, 0.5), rgba(153, 241, 145, 0.5)),  url(https://www.insurancejournal.com/app/uploads/2020/06/bloomberg-deutsche-bank-offices-in-eschborn-germany.jpg);
+  background-image: linear-gradient(rgba(153, 241, 145, 0.5), rgba(153, 241, 145, 0.5)), url(https://www.insurancejournal.com/app/uploads/2020/06/bloomberg-deutsche-bank-offices-in-eschborn-germany.jpg);
 }
 
 .img5 {
-    background-image: linear-gradient(rgba(153, 241, 145, 0.5), rgba(153, 241, 145, 0.5)),  url(https://repost.uz/storage/uploads/file_5da3290b4f9fd6.680572051570973963.jpg);
+  background-image: linear-gradient(rgba(153, 241, 145, 0.5), rgba(153, 241, 145, 0.5)), url(https://repost.uz/storage/uploads/file_5da3290b4f9fd6.680572051570973963.jpg);
 }
 
 .img6 {
-    background-image: linear-gradient(rgba(153, 241, 145, 0.5), rgba(153, 241, 145, 0.5)),  url(https://retaildesignblog.net/wp-content/uploads/2020/02/retail-store-design-Evidea-08-780x520.jpg);
+  background-image: linear-gradient(rgba(153, 241, 145, 0.5), rgba(153, 241, 145, 0.5)), url(https://retaildesignblog.net/wp-content/uploads/2020/02/retail-store-design-Evidea-08-780x520.jpg);
 }
 
-
 .lower {
-    justify-content: flex-end;
-    right: 1rem;
+  justify-content: flex-end;
+  right: 1rem;
 }
 
 .track {
-    position: absolute;
-    left: 3rem;
-    width: 30rem;
-    top: 3rem;
+  position: absolute;
+  left: 3rem;
+  width: 30rem;
+  top: 3rem;
 }
 
 footer {
-    background-color: #002F87;
-    color: white;
+  background-color: #002f87;
+  color: white;
 }
 
-.footer { 
-    justify-content: space-around;
-    /* width: 10rem; */
+.footer {
+  justify-content: space-around;
 }
 
-.footer h5 a,
-.footer ul li a {
-    text-decoration: none;
-    color: white;
-    
-}
 .footer ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .footerbottom {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 [class="right hr "] {
-    display: inline;
+  display: inline;
 }
 
-@media only screen and (max-width:500px) {
-    .right ul li:first-child {
-        display: block;
-    }
-    .right ul li:not(:first-child)  {
-        display: none;
-    }
+@media only screen and (max-width: 500px) {
+  .right ul li:first-child {
+    display: block;
+  }
 
+  .right ul li:not(:first-child) {
+    display: none;
+  }
 }
-
-/* *{ border: 1px solid blue;} */
-
